single frame fit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,10 @@ target_link_libraries(3dba
 )
 target_compile_features(3dba PRIVATE cxx_std_17)
 
-# ── smoke-test executable ───────────────────────────────────────────────
-# add_executable(smpl_test
-#     tests/test_smpl_neutral.cpp
-# )
-# target_link_libraries(smpl_test
-#     PRIVATE smplpp torch xtensor
-# )
-# target_compile_features(smpl_test PRIVATE cxx_std_17)
+add_executable(single_frame_fit
+    src/demo_single_frame.cpp
+)
+target_link_libraries(single_frame_fit
+    PRIVATE smplpp torch xtensor ceres
+)
+target_compile_features(single_frame_fit PRIVATE cxx_std_17)
