--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/xtl"]
 	path = external/xtl
 	url = https://github.com/xtensor-stack/xtl.git
+[submodule "external/smplxpp"]
+	path = external/smplxpp
+	url = https://github.com/sxyu/smplxpp.git
